# gmum

./: CMakeLists.txt  Device Communication Definition.md  README.md  globject.cpp  globject.h  glwidget.cpp  glwidget.h  lightbeam.cpp  lightbeam.h  main.cpp  mainwindow.cpp  mainwindow.h  reflectometer.cpp  reflectometer.h  reflectosphere.cpp  reflectosphere.h  resources.qrc
shaders/: fragmentshader.glsl  ray.fsh  ray.vsh  sphere.fsh  sphere.vsh  vertexshader.glsl
